Fix dropdown list overflow style

--- a/css/main.css
+++ b/css/main.css
@@ -823,7 +823,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  overflow: auto;
 }
 .tm-quark-dropdown__option {
   background-color: #546e7a;
