--- a/src/components/Dropdown.less
+++ b/src/components/Dropdown.less
@@ -414,7 +414,6 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    overflow: auto;
   }
 
   &__option {
